<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenuFragment">

    <TextView
        android:id="@+id/titulo_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="@id/jugar_online_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jugar_solo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugar_solo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/jugar_online_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/titulo_menu" />

    <Button
        android:id="@+id/jugar_online_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugar_online"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/perfil_button"
        app:layout_constraintStart_toEndOf="@id/jugar_solo_button"
        app:layout_constraintTop_toTopOf="@id/titulo_menu" />

    <Button
        android:id="@+id/perfil_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jugar_online_button"
        app:layout_constraintTop_toTopOf="@id/titulo_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>