<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnlineMenuFragment">

    <TextView
        android:id="@+id/titulo_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="@id/crear_sala_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/subtitulo_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juego_online"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_menu" />

    <Button
        android:id="@+id/crear_sala_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_sala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/unirse_sala_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/subtitulo_menu" />

    <Button
        android:id="@+id/unirse_sala_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unirse_sala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/crear_sala_button"
        app:layout_constraintTop_toTopOf="@id/subtitulo_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/back_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>